// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentContainer Cancel button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <Component
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu dropdown comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          data-toggle="dropdown"
        >
          <Icon
            className="align-middle"
            name="more_vert"
          >
            <i
              className="material-icons material-icons-more_vert align-middle"
            >
              more_vert
            </i>
          </Icon>
        </div>
        <div
          className="dropdown-menu dropdown-menu-right"
        >
          <Component
            icon="edit"
            onClick={[Function]}
            title="Redigér indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  className="material-icons material-icons-edit align-middle mr-2"
                >
                  edit
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Redigér indlæg
              </span>
            </div>
          </Component>
          <Component
            icon="clear"
            onClick={[Function]}
            title="Slet indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="clear"
              >
                <i
                  className="material-icons material-icons-clear align-middle mr-2"
                >
                  clear
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Slet indlæg
              </span>
            </div>
          </Component>
        </div>
      </div>
    </Component>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        size="40"
        style={
          Object {
            "marginRight": "10px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card d-flex flex-column "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "40px",
                "lineHeight": "74px",
                "marginRight": "10px",
                "width": "40px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "26px",
                  "height": "40px",
                  "lineHeight": "40px",
                  "width": "40px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "26px",
                    "height": "40px",
                    "lineHeight": "40px",
                    "width": "40px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment"
        >
          <div
            className="d-flex align-items-center"
          >
            <Text
              className="mb-2"
              type="large"
            >
              <p
                className="mb-2 Text Text__large "
              >
                Benny Cosmos
              </p>
            </Text>
            <Text
              className="ml-4 mb-2 d-none d-md-block"
              type="small"
              variant="color-due"
            >
              <p
                className="ml-4 mb-2 d-none d-md-block Text Text__small Text__small--color-due"
              >
                Lige nu
              </p>
            </Text>
          </div>
          comment_test
        </div>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Cancel button 2`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <Component
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu dropdown comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          data-toggle="dropdown"
        >
          <Icon
            className="align-middle"
            name="more_vert"
          >
            <i
              className="material-icons material-icons-more_vert align-middle"
            >
              more_vert
            </i>
          </Icon>
        </div>
        <div
          className="dropdown-menu dropdown-menu-right"
        >
          <Component
            icon="edit"
            onClick={[Function]}
            title="Redigér indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  className="material-icons material-icons-edit align-middle mr-2"
                >
                  edit
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Redigér indlæg
              </span>
            </div>
          </Component>
          <Component
            icon="clear"
            onClick={[Function]}
            title="Slet indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="clear"
              >
                <i
                  className="material-icons material-icons-clear align-middle mr-2"
                >
                  clear
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Slet indlæg
              </span>
            </div>
          </Component>
        </div>
      </div>
    </Component>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        size="40"
        style={
          Object {
            "marginRight": "10px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card d-flex flex-column "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "40px",
                "lineHeight": "74px",
                "marginRight": "10px",
                "width": "40px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "26px",
                  "height": "40px",
                  "lineHeight": "40px",
                  "width": "40px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "26px",
                    "height": "40px",
                    "lineHeight": "40px",
                    "width": "40px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment"
        >
          <div
            className="d-flex align-items-center"
          >
            <Text
              className="mb-2"
              type="large"
            >
              <p
                className="mb-2 Text Text__large "
              >
                Benny Cosmos
              </p>
            </Text>
            <Text
              className="ml-4 mb-2 d-none d-md-block"
              type="small"
              variant="color-due"
            >
              <p
                className="ml-4 mb-2 d-none d-md-block Text Text__small Text__small--color-due"
              >
                Lige nu
              </p>
            </Text>
          </div>
          comment_test
        </div>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Delete button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  deleteComment={[Function]}
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <Component
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu dropdown comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          data-toggle="dropdown"
        >
          <Icon
            className="align-middle"
            name="more_vert"
          >
            <i
              className="material-icons material-icons-more_vert align-middle"
            >
              more_vert
            </i>
          </Icon>
        </div>
        <div
          className="dropdown-menu dropdown-menu-right"
        >
          <Component
            icon="edit"
            onClick={[Function]}
            title="Redigér indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  className="material-icons material-icons-edit align-middle mr-2"
                >
                  edit
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Redigér indlæg
              </span>
            </div>
          </Component>
          <Component
            icon="clear"
            onClick={[Function]}
            title="Slet indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="clear"
              >
                <i
                  className="material-icons material-icons-clear align-middle mr-2"
                >
                  clear
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Slet indlæg
              </span>
            </div>
          </Component>
        </div>
      </div>
    </Component>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        size="40"
        style={
          Object {
            "marginRight": "10px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card d-flex flex-column "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "40px",
                "lineHeight": "74px",
                "marginRight": "10px",
                "width": "40px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "26px",
                  "height": "40px",
                  "lineHeight": "40px",
                  "width": "40px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "26px",
                    "height": "40px",
                    "lineHeight": "40px",
                    "width": "40px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment"
        >
          <div
            className="d-flex align-items-center"
          >
            <Text
              className="mb-2"
              type="large"
            >
              <p
                className="mb-2 Text Text__large "
              >
                Benny Cosmos
              </p>
            </Text>
            <Text
              className="ml-4 mb-2 d-none d-md-block"
              type="small"
              variant="color-due"
            >
              <p
                className="ml-4 mb-2 d-none d-md-block Text Text__small Text__small--color-due"
              >
                Lige nu
              </p>
            </Text>
          </div>
          comment_test
        </div>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Edit button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <Component
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu dropdown comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          data-toggle="dropdown"
        >
          <Icon
            className="align-middle"
            name="more_vert"
          >
            <i
              className="material-icons material-icons-more_vert align-middle"
            >
              more_vert
            </i>
          </Icon>
        </div>
        <div
          className="dropdown-menu dropdown-menu-right"
        >
          <Component
            icon="edit"
            onClick={[Function]}
            title="Redigér indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  className="material-icons material-icons-edit align-middle mr-2"
                >
                  edit
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Redigér indlæg
              </span>
            </div>
          </Component>
          <Component
            icon="clear"
            onClick={[Function]}
            title="Slet indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="clear"
              >
                <i
                  className="material-icons material-icons-clear align-middle mr-2"
                >
                  clear
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Slet indlæg
              </span>
            </div>
          </Component>
        </div>
      </div>
    </Component>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        size="40"
        style={
          Object {
            "marginRight": "10px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card d-flex flex-column "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "40px",
                "lineHeight": "74px",
                "marginRight": "10px",
                "width": "40px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "26px",
                  "height": "40px",
                  "lineHeight": "40px",
                  "width": "40px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "26px",
                    "height": "40px",
                    "lineHeight": "40px",
                    "width": "40px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment"
        >
          <div
            className="d-flex align-items-center"
          >
            <Text
              className="mb-2"
              type="large"
            >
              <p
                className="mb-2 Text Text__large "
              >
                Benny Cosmos
              </p>
            </Text>
            <Text
              className="ml-4 mb-2 d-none d-md-block"
              type="small"
              variant="color-due"
            >
              <p
                className="ml-4 mb-2 d-none d-md-block Text Text__small Text__small--color-due"
              >
                Lige nu
              </p>
            </Text>
          </div>
          comment_test
        </div>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Edit button 2`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <Component
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu dropdown comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          data-toggle="dropdown"
        >
          <Icon
            className="align-middle"
            name="more_vert"
          >
            <i
              className="material-icons material-icons-more_vert align-middle"
            >
              more_vert
            </i>
          </Icon>
        </div>
        <div
          className="dropdown-menu dropdown-menu-right"
        >
          <Component
            icon="edit"
            onClick={[Function]}
            title="Redigér indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  className="material-icons material-icons-edit align-middle mr-2"
                >
                  edit
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Redigér indlæg
              </span>
            </div>
          </Component>
          <Component
            icon="clear"
            onClick={[Function]}
            title="Slet indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="clear"
              >
                <i
                  className="material-icons material-icons-clear align-middle mr-2"
                >
                  clear
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Slet indlæg
              </span>
            </div>
          </Component>
        </div>
      </div>
    </Component>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        size="40"
        style={
          Object {
            "marginRight": "10px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card d-flex flex-column "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "40px",
                "lineHeight": "74px",
                "marginRight": "10px",
                "width": "40px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "26px",
                  "height": "40px",
                  "lineHeight": "40px",
                  "width": "40px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "26px",
                    "height": "40px",
                    "lineHeight": "40px",
                    "width": "40px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <CommentInput
          autoFocus={true}
          error={null}
          hideProfile={true}
          onCancel={[Function]}
          onChange={[Function]}
          onDelete={[Function]}
          onSubmit={[Function]}
          user={
            Object {
              "name": "Benny Cosmos",
              "openplatformId": "1234",
            }
          }
          value="comment_test"
        >
          <div
            style={
              Object {
                "display": "flex",
              }
            }
          >
            <div
              className="form-group "
              onFocus={[Function]}
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <textarea
                autoFocus={true}
                className="form-control mb1 comment-textarea"
                name="list-description"
                onBlur={[Function]}
                onChange={[Function]}
                placeholder="Skriv kommentar"
                value="comment_test"
              />
              <div
                className="tr"
                style={
                  Object {
                    "height": "0px",
                    "opacity": 0,
                    "overflow": "hidden",
                    "transition": "all 200ms",
                  }
                }
              >
                <Button
                  className="comment-cancel mr-2 ml-2"
                  onClick={[Function]}
                  size="medium"
                  type="link"
                >
                  <button
                    className="comment-cancel mr-2 ml-2
                        btn Button Button__medium Button__link "
                    disabled={false}
                    onClick={[Function]}
                  >
                    Fortryd
                  </button>
                </Button>
                <Button
                  className="mr-2 ml-2"
                  disabled={false}
                  id="comment-submit"
                  onClick={[Function]}
                  type="quaternary"
                >
                  <button
                    className="mr-2 ml-2
                        btn Button Button__large Button__quaternary "
                    disabled={false}
                    id="comment-submit"
                    onClick={[Function]}
                  >
                    Kommentér
                  </button>
                </Button>
              </div>
            </div>
          </div>
        </CommentInput>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Render comment 1`] = `
<div
  className="comment-wrapper"
>
  
  <div
    className="flex mb2"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="profile-card d-flex flex-column "
    >
      <span
        className="profile-image text-center small round"
        style={
          Object {
            "height": "40px",
            "lineHeight": "74px",
            "marginRight": "10px",
            "width": "40px",
          }
        }
      >
        <i
          className="material-icons material-icons-face "
          style={
            Object {
              "backgroundColor": "#e9eaeb",
              "borderRadius": "50%",
              "display": "block",
              "fontSize": "26px",
              "height": "40px",
              "lineHeight": "40px",
              "width": "40px",
            }
          }
        >
          face
        </i>
      </span>
      
    </div>
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment"
      >
        <div
          className="d-flex align-items-center"
        >
          <p
            className="mb-2 Text Text__large "
          >
            Benny Cosmos
          </p>
          <p
            className="ml-4 mb-2 d-none d-md-block Text Text__small Text__small--color-due"
          >
            Lige nu
          </p>
        </div>
        comment_test
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentContainer Render edit form 1`] = `
<div
  className="comment-wrapper"
>
  
  <div
    className="ContextMenu dropdown comment-wrapper-context-menu"
    style={undefined}
  >
    <div
      className="dropdown-toggle"
      data-toggle="dropdown"
    >
      <i
        className="material-icons material-icons-more_vert align-middle"
      >
        more_vert
      </i>
      
    </div>
    <div
      className="dropdown-menu dropdown-menu-right"
    >
      <div
        className="dropdown-item"
        onClick={[Function]}
      >
        <i
          className="material-icons material-icons-edit align-middle mr-2"
        >
          edit
        </i>
        <span
          className="align-middle"
        >
          Redigér indlæg
        </span>
      </div>
      <div
        className="dropdown-item"
        onClick={[Function]}
      >
        <i
          className="material-icons material-icons-clear align-middle mr-2"
        >
          clear
        </i>
        <span
          className="align-middle"
        >
          Slet indlæg
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex mb2"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="profile-card d-flex flex-column "
    >
      <span
        className="profile-image text-center small round"
        style={
          Object {
            "height": "40px",
            "lineHeight": "74px",
            "marginRight": "10px",
            "width": "40px",
          }
        }
      >
        <i
          className="material-icons material-icons-face "
          style={
            Object {
              "backgroundColor": "#e9eaeb",
              "borderRadius": "50%",
              "display": "block",
              "fontSize": "26px",
              "height": "40px",
              "lineHeight": "40px",
              "width": "40px",
            }
          }
        >
          face
        </i>
      </span>
      
    </div>
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment"
      >
        <div
          className="d-flex align-items-center"
        >
          <p
            className="mb-2 Text Text__large "
          >
            Benny Cosmos
          </p>
          <p
            className="ml-4 mb-2 d-none d-md-block Text Text__small Text__small--color-due"
          >
            Lige nu
          </p>
        </div>
        comment_test
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentContainer Render save form 1`] = `
<div
  className="comment-wrapper"
>
  <div
    className="comment-saving"
  >
    <span
      className="spinner "
      style={
        Object {
          "borderTopColor": null,
          "display": "inline-block",
          "height": "30px",
          "width": "30px",
        }
      }
    />
  </div>
  <div
    className="ContextMenu dropdown comment-wrapper-context-menu"
    style={undefined}
  >
    <div
      className="dropdown-toggle"
      data-toggle="dropdown"
    >
      <i
        className="material-icons material-icons-more_vert align-middle"
      >
        more_vert
      </i>
      
    </div>
    <div
      className="dropdown-menu dropdown-menu-right"
    >
      <div
        className="dropdown-item"
        onClick={[Function]}
      >
        <i
          className="material-icons material-icons-edit align-middle mr-2"
        >
          edit
        </i>
        <span
          className="align-middle"
        >
          Redigér indlæg
        </span>
      </div>
      <div
        className="dropdown-item"
        onClick={[Function]}
      >
        <i
          className="material-icons material-icons-clear align-middle mr-2"
        >
          clear
        </i>
        <span
          className="align-middle"
        >
          Slet indlæg
        </span>
      </div>
    </div>
  </div>
  <div
    className="flex mb2"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <div
      className="profile-card d-flex flex-column "
    >
      <span
        className="profile-image text-center small round"
        style={
          Object {
            "height": "40px",
            "lineHeight": "74px",
            "marginRight": "10px",
            "width": "40px",
          }
        }
      >
        <i
          className="material-icons material-icons-face "
          style={
            Object {
              "backgroundColor": "#e9eaeb",
              "borderRadius": "50%",
              "display": "block",
              "fontSize": "26px",
              "height": "40px",
              "lineHeight": "40px",
              "width": "40px",
            }
          }
        >
          face
        </i>
      </span>
      
    </div>
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment"
      >
        <div
          className="d-flex align-items-center"
        >
          <p
            className="mb-2 Text Text__large "
          >
            Benny Cosmos
          </p>
          <p
            className="ml-4 mb-2 d-none d-md-block Text Text__small Text__small--color-due"
          >
            Lige nu
          </p>
        </div>
        comment_test
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentContainer Save button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  editComment={[Function]}
  toggleEdit={[Function]}
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <Component
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu dropdown comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          data-toggle="dropdown"
        >
          <Icon
            className="align-middle"
            name="more_vert"
          >
            <i
              className="material-icons material-icons-more_vert align-middle"
            >
              more_vert
            </i>
          </Icon>
        </div>
        <div
          className="dropdown-menu dropdown-menu-right"
        >
          <Component
            icon="edit"
            onClick={[Function]}
            title="Redigér indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  className="material-icons material-icons-edit align-middle mr-2"
                >
                  edit
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Redigér indlæg
              </span>
            </div>
          </Component>
          <Component
            icon="clear"
            onClick={[Function]}
            title="Slet indlæg"
          >
            <div
              className="dropdown-item"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="clear"
              >
                <i
                  className="material-icons material-icons-clear align-middle mr-2"
                >
                  clear
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Slet indlæg
              </span>
            </div>
          </Component>
        </div>
      </div>
    </Component>
    <div
      className="flex mb2"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <ProfileImage
        size="40"
        style={
          Object {
            "marginRight": "10px",
          }
        }
        user={
          Object {
            "name": "Benny Cosmos",
            "openplatformId": "1234",
          }
        }
      >
        <div
          className="profile-card d-flex flex-column "
        >
          <span
            className="profile-image text-center small round"
            style={
              Object {
                "height": "40px",
                "lineHeight": "74px",
                "marginRight": "10px",
                "width": "40px",
              }
            }
          >
            <Icon
              name="face"
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "26px",
                  "height": "40px",
                  "lineHeight": "40px",
                  "width": "40px",
                }
              }
            >
              <i
                className="material-icons material-icons-face "
                style={
                  Object {
                    "backgroundColor": "#e9eaeb",
                    "borderRadius": "50%",
                    "display": "block",
                    "fontSize": "26px",
                    "height": "40px",
                    "lineHeight": "40px",
                    "width": "40px",
                  }
                }
              >
                face
              </i>
            </Icon>
          </span>
        </div>
      </ProfileImage>
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment"
        >
          <div
            className="d-flex align-items-center"
          >
            <Text
              className="mb-2"
              type="large"
            >
              <p
                className="mb-2 Text Text__large "
              >
                Benny Cosmos
              </p>
            </Text>
            <Text
              className="ml-4 mb-2 d-none d-md-block"
              type="small"
              variant="color-due"
            >
              <p
                className="ml-4 mb-2 d-none d-md-block Text Text__small Text__small--color-due"
              >
                Lige nu
              </p>
            </Text>
          </div>
          comment_test
        </div>
      </div>
    </div>
  </div>
</CommentWrapper>
`;
